# flames

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindSphinx.cmake
docs/: CMakeLists.txt  Doxyfile.in  Makefile  conf.py  index.rst
examples/: CMakeLists.txt  example_utils.hpp  resnet.cpp  resnet_v2.cpp  selectsls_net.cpp
include/flame/models/: basic_block.hpp  bottleneck.hpp  resnet.hpp  resnet_v2.hpp  select_sls_net.hpp  sls_block.hpp
include/flame/transforms/: transforms.hpp
include/flame/util/: conv.hpp  load.hpp  stack_sequential.hpp
include/ripple/flame/models/: basic_block.hpp  bottleneck.hpp  resnet_v2.hpp
include/ripple/flame/util/: conv.hpp
models/: create_models.py  model_utils.py
src/models/: basic_block.cpp  bottleneck.cpp  select_sls_net.cpp  sls_block.cpp
src/transforms/: transforms.cpp
src/util/: conv.cpp
